# whisper-diarize

./: README.md  app.py  pyproject.toml
src/: transcriber.py
