[project]
name = "whisper-diarize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "python-multipart>=0.0.20,<0.0.21",
    "requests>=2.32.0,<3.0.0",
    "torch>=2.8.0,<2.9.0",
    "torchaudio>=2.8.0,<2.9.0",
    "torchvision>=0.23.0,<0.24.0",
    "uvicorn>=0.35.0,<0.36.0",
    "whisperx>=3.7.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
